# smolagents_loan_agent_poc

./: pyproject.toml  user_prompts.txt
data/: endpoints.json
ingest_data/: ingest_data.py
ingest_data/mychroma_db/: chroma.sqlite3
loan_agent/: app.py  graph.py  schemas.py
loan_agent/nodes_and_conditional_edges/: nodes.py
loan_agent/outputs/: api_call_executor.txt  prompt_parser.txt
loan_agent/prompts/: prompts.py
loan_agent/tools/: api_caller.py  query_chromadb.py
